V3 (#9)
* Automate hadoop and spark installation